--- a/src/revelation.in
+++ b/src/revelation.in
@@ -24,6 +24,7 @@
 
 from __future__ import absolute_import
 
+import gettext
 import gtk
 import os
 import sys
@@ -31,7 +32,12 @@ import sys
 if "$python_libdir$" not in sys.path:
 	sys.path.insert(0, "$python_libdir$")
 
-from revelation import config, dialog, stock, ui
+from revelation import config
+from revelation import dialog
+from revelation import stock
+from revelation import ui
+
+_= gettext.gettext
 
 
 
@@ -61,15 +67,15 @@ class Revelation(ui.App):
 
 		# set up global actions
 		group_global.add_actions([
-			( "file-close",		stock.STOCK_CLOSE,	None, None, "Closes the application",	self.__cb_quit),
-			( "file-quit",		stock.STOCK_QUIT,	None, None, "Quits the application",	self.__cb_quit),
-			( "help-about",		stock.STOCK_ABOUT,	None, None, "About this application",	self.__cb_about),
+			( "file-close",		stock.STOCK_CLOSE,	None, None, _('Closes the application'),	self.__cb_quit),
+			( "file-quit",		stock.STOCK_QUIT,	None, None, _('Quits the application'),		self.__cb_quit),
+			( "help-about",		stock.STOCK_ABOUT,	None, None, _('About this application'),	self.__cb_about),
 		])
 
 		# set up menubar actions
 		group_menubar.add_actions([
-			( "menu-file",		None,			"_File" ),
-			( "menu-help",		None,			"_Help" ),
+			( "menu-file",		None,			_('_File') ),
+			( "menu-help",		None,			_('_Help') ),
 		])
 
 		# load ui from file
