fixed some translation issues

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,6 @@
 src/revelation.in
-src/lib/__init__.py
-src/lib/config.py.in
-src/lib/dialog.py
-src/lib/stock.py
-src/lib/ui.py
+src/package/__init__.py
+src/package/config.py.in
+src/package/dialog.py
+src/package/stock.py
+src/package/ui.py
