added gettext initialization

--- a/src/package/config.py.in
+++ b/src/package/config.py.in
@@ -30,6 +30,7 @@ _ = gettext.gettext
 
 NAME		= "Revelation"
 VERSION		= "$version$"
+PACKAGE		= "$package$"
 DESCRIPTION	= _('A password manager for GNOME')
 RELEASENAME	= "$releasename$"
 WEBSITE		= "http://oss.codepoet.no/revelation/"
@@ -50,5 +51,6 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.""")
 
-DIR_ICONS	= "$datadir/icons"
+DIR_ICONS	= "$datadir$/icons"
+DIR_LOCALE	= "$datadir$/locale"
 DIR_UI		= "$datadir$/$package$/ui"
