fixed some issues with the gettext initialization

--- a/src/revelation.in
+++ b/src/revelation.in
@@ -39,6 +39,8 @@ from revelation import dialog
 from revelation import stock
 from revelation import ui
 
+_ = gettext.gettext
+
 
 
 class Revelation(ui.App):
@@ -46,7 +48,10 @@ class Revelation(ui.App):
 
 	def __init__(self):
 		os.umask(0077)
-		gettext.install(config.PACKAGE, config.DIR_LOCALE, True)
+
+		gettext.bindtextdomain(config.PACKAGE, config.DIR_LOCALE)
+		gettext.bind_textdomain_codeset(config.PACKAGE, "UTF-8")
+		gettext.textdomain(config.PACKAGE)
 
 		ui.App.__init__(self, config.NAME, sys.argv)
 
