updated code for python-shinygnome changes

--- a/src/package/config.py.in
+++ b/src/package/config.py.in
@@ -24,11 +24,14 @@
 from __future__ import absolute_import
 
 import gettext
-from .shinygnome import config as shinyconfig
+from .shinygnome.config import error as shinyerror
+from .shinygnome.config import gconf as shinygconf
 
 
-_	= gettext.gettext
-Config	= shinyconfig.GConf
+_		= gettext.gettext
+Config		= shinygconf.GConf
+ConfigError	= shinyerror.ConfigError
+InstallError	= shinyerror.InstallError
 
 
 NAME		= "Revelation"
