--- a/src/revelation.in
+++ b/src/revelation.in
@@ -48,18 +48,21 @@ class Revelation(ui.App):
 
 	def __init__(self):
 		os.umask(0077)
-
 		gettext.bindtextdomain(config.PACKAGE, config.DIR_LOCALE)
-		gettext.bind_textdomain_codeset(config.PACKAGE, "UTF-8")
-		gettext.textdomain(config.PACKAGE)
 
-		ui.App.__init__(self, config.NAME, sys.argv)
+		ui.App.__init__(self, config.NAME, config.PACKAGE, config.VERSION, sys.argv)
 
 		self.connect("delete-event", self.__cb_quit)
 
-		self.__init_actions()
-		self.__init_ui()
-		self.__init_state()
+		try:
+			self.__init_actions()
+			self.__init_ui()
+			self.__init_state()
+
+		except config.InstallError, e:
+			raise
+			dialog.ErrorDialog(self, _('GConf schema install failed'), _('The GConf configuration schema %s could not be installed' % e.schema)).run()
+			sys.exit(1)
 
 
 	def __init_actions(self):
@@ -119,7 +122,7 @@ class Revelation(ui.App):
 
 		# set up stock items and icons
 		self.stockfactory = stock.StockFactory(self, config.DIR_ICONS)
-		self.set_default_icons(self.stockfactory.get_pixbufs("revelation", ( 48, 32, 24, 16 )))
+		self.set_default_icon_list(self.stockfactory.get_pixbufs("revelation", ( 48, 32, 24, 16 )))
 
 		# set up user interface
 		self.set_menus(self.uimanager.get_widget("/menubar"))
